# oldland-cpu

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README  README.md  index.html  instructions.html  instructions.md  keynsham.html  keynsham.md  params.json
_data/: instructions.yaml  keynsham.yaml
_includes/: footer.html  header.html
bootrom/: CMakeLists.txt  Makefile  bootrom.s  bootrom.x  common.h  common.s  elf.h  entry.s  gen_build  kernel.c  readmbr.c  sdcard.c  sdram.s  sim.s  string.c  string.h  uart.c  uart.h
common/: die.h
config/: CMakeLists.txt  de0-cv.yaml  instructions.json  instructions.yaml  keynsham.json  keynsham.yaml
config/regmaps/: gpio.yaml  irq_ctrl.yaml  sdram_ctrl.yaml  spimaster.yaml  timer.yaml  uart.yaml
debugger/: CMakeLists.txt  breakpoint.c  breakpoint.h  debugger.c  debugger.h  elfmap.c  elfmap.h  loadelf.c  loadsyms.c  loadsyms.h  oldland-debug-ui.lua  protocol.h  regcache.c
debugger/CMake/Modules/: FindLua52.cmake
devicemodels/: CMakeLists.txt  jtag.c  jtag.h  spi_sdcard.c  spi_sdcard.h  uart.c  uart.h
docs/: DESIGN  TODO  booting.html  booting.md  design.html  design.md  interconnect  jtag.html  jtag.md  jtag.txt  memory.html  memory.md  memory.txt  refresh-gh  simulating  simulating.html  simulating.md  spimaster.html  spimaster.md  tlb.html  tlb.md
fpga/: .gitignore  PLLJ_PLLSPE_INFO.txt  bootrom.hex  bootrom.qip  bootrom.v  bootrom_bb.v  bootrom_syn.v  genbootrom  generate  generate.tcl  jtag.qip  jtag_bb.v  keynsham-soc.qpf  keynsham-soc.qsf  keynsham-soc.sdc  keynsham-soc.srf  ram.qip  ram.v  ram_bb.v  ram_syn.v  sys_pll.qip  sys_pll.v  sys_pll_bb.v  toplevel.v
fpga/de0-cv/: PLLJ_PLLSPE_INFO.txt  bootrom.v  bootrom_bb.v  c5_pin_model_dump.txt  generate  jtag.qip  jtag.v  jtag_bb.v  keynsham-soc.qsf  keynsham-soc.sdc  keynsham-soc.srf  keynsham-soc_assignment_defaults.qdf  ram.v  ram_bb.v  sys_pll.bsf  sys_pll.cmp  sys_pll.ppf  sys_pll.qip  sys_pll.sip  sys_pll.v
fpga/de0-nano/: PLLJ_PLLSPE_INFO.txt  bootrom.qip  bootrom_syn.v  de0nano.cdf  generate  jtag.v  jtag_inst.v  keynsham-soc.qsf  keynsham-soc.srf  ram.v  ram_bb.v  ram_inst.v  sys_pll.ppf  sys_pll.qip
oldland-jtag/: CMakeLists.txt  oldland-jtagd.c
rtl/: decode.hex  decode.v  oldland_cpu.v  oldland_debug.v  oldland_decode.v  oldland_defines.v  oldland_execute.v  oldland_fetch.v  oldland_memory.v  oldland_regfile.v  sim_instr_rom.v  sync2ff.v
rtl/common/: block_ram.v  cache_data_ram.v  cs_gen.v  dc_ram.v
rtl/keynsham/: keynsham_bootrom.v  keynsham_gpio.v  keynsham_irq.v  (+7 more)
scripts/: build-all.sh  runtests.sh
sim/: CMakeLists.txt  cache.c  cache.h  config.h  cpu.c  cpu.h  debug_uart.c  internal.h  io.c  io.h  irq_ctrl.c  irq_ctrl.h  list.h  main.c  memory.c  microcode.h  oldland-instructions.c  oldland-types.h  periodic.c  periodic.h  sdcard.c  sdcard.h  spimaster.c  spimaster.h  timer.c  tlb.c  tlb.h  trace.c  trace.h
stylesheets/: stylesheet.css
tests/: CMakeLists.txt  CMakeOldlandTests.txt  Makefile  Makefile.test  common.lua  oldland-test  terminate.lua
tests/addbranch/: CMakeLists.txt  Makefile  addbranch.S  addbranch.lua  addbranch.s
tests/addcarry/: CMakeLists.txt  addcarry.lua  addcarry.s
tests/alu/: CMakeLists.txt  alu.lua  alu.s
tests/badaddr/: CMakeLists.txt  badaddr.lua  badaddr.s
tests/bkpt/: CMakeLists.txt  bkpt.lua  bkpt.s
tests/branches/: CMakeLists.txt  branches.lua  branches.s
tests/calls/: CMakeLists.txt  calls.lua  calls.s
tests/cflush/: CMakeLists.txt  cflush.lua  cflush.s
tests/cpuid/: CMakeLists.txt  cpuid.lua  cpuid.s
tests/crbasic/: CMakeLists.txt  crbasic.lua  crbasic.s
tests/d_sdram/: CMakeLists.txt  d_sdram.lua  d_sdram.s
tests/dcache/: CMakeLists.txt  dcache.lua  dcache.s
tests/echo/: Makefile  echo.S
tests/exception_irq_disabled/: CMakeLists.txt  exception_irq_disabled.lua  exception_irq_disabled.s
tests/exceptions_user/: CMakeLists.txt  exceptions_user.lua  exceptions_user.s
tests/forward/: CMakeLists.txt  forward.lua  forward.s
tests/hello/: Makefile  hello.S  hello.lua
tests/hellosdram/: Makefile  hellosdram.S  hellosdram.lua
tests/i_sdram/: CMakeLists.txt  i_sdram.lua  i_sdram.s
tests/ifetchabort/: CMakeLists.txt  ifetchabort.lua  ifetchabort.s
tests/illegalinstr/: CMakeLists.txt  illegalinstr.lua  illegalinstr.s
tests/irq/: CMakeLists.txt  irq.lua  irq.s
tests/irq_sdram/: CMakeLists.txt  irq_sdram.lua  irq_sdram.s
tests/ldrstr/: CMakeLists.txt  ldrstr.lua  ldrstr.s
tests/mov/: CMakeLists.txt  mov.lua  mov.s
tests/mul/: CMakeLists.txt  mul.lua  mul.s
tests/privileged_instructions/: CMakeLists.txt  privileged_instructions.lua  privileged_instructions.s
tests/psr/: CMakeLists.txt  psr.lua  psr.s
tests/sdram/: Makefile  sdram.s
tests/selfmod/: CMakeLists.txt  selfmod.lua  selfmod.s
tests/spiloopback/: CMakeLists.txt  spiloopback.lua  spiloopback.s
tests/stack_save/: CMakeLists.txt  stack_save.lua  stack_save.s
tests/step/: CMakeLists.txt  step.lua  step.s
tests/swi/: CMakeLists.txt  swi.lua  swi.s
tests/timer/: CMakeLists.txt  timer.lua  timer.s
tests/timer_irq/: CMakeLists.txt  timer_irq.lua  timer_irq.s
tests/tlb/: CMakeLists.txt  tlb.lua  tlb.s
tests/tlb_accesscontrol/: CMakeLists.txt  tlb_accesscontrol.lua  tlb_accesscontrol.s
tests/tlb_miss_alignment/: CMakeLists.txt  tlb_miss_alignment.lua  tlb_miss_alignment.s
tests/tlb_notestpoints/: CMakeLists.txt  tlb_notestpoints.lua  tlb_notestpoints.s
tests/tlb_user/: CMakeLists.txt  tlb_user.lua  tlb_user.s
verif/: CMakeLists.txt  Makefile  cpu_tb.v  dc_ram.v  debug_controller.v  fetch_tb.v  oldland-rtlsim  oldland-verilatorsim  oldland.cf  sim_dp_ram.v  sim_dp_rom.v  simuart.v  spislave.v  verilator_model.cpp  vpi_debug_stub.c  vpi_spislave.c  vpi_uart.c
verif/common/: debug_controller.v  sim_dp_rom.v  simuart.v  spislave.v
verif/icarus/: CMakeLists.txt  cpu_tb.v  oldland.cf  vpi_debug_stub.c  vpi_spislave.c  vpi_uart.c
verif/verilator/: CMakeLists.txt  debug.cpp  debug.h  spi.cpp  spi.h  uart.cpp  uart.h  verilator_model.cpp  verilator_sdram_model.v  verilator_toplevel.v
(+47 files in other folders)
